# end-to-end-student-exam-performance

./: .gitignore  README.md  app.py  pyproject.toml
app/: __main__.py  utils.py
app/components/: data_ingestion.py  data_transformation.py  model_trainer.py
artitacts/: preprocessor.pkl
